Fixed hamburger menu being occluded by post body on mobile

--- a/vteach/css/main.css
+++ b/vteach/css/main.css
@@ -160,7 +160,6 @@ html {
   border-bottom: 1px solid #e8e8e8;
   min-height: 56px;
   position: relative;
-  overflow-x: hidden;
   background-color: #f8f8f8; }
 
 .site-title {
